--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 TINKERPATCH_VERSION=1.1.8
+OKHTTP3_VERSION=3.8.1
+OKHTTP_VERSION=2.7.5
+
+TINKER_VERSION=1.8.0
+
